Gtk+-3.20 Traditional themes: fix jumping combobox button
A regression caused by fixing https://github.com/mate-desktop/mate-themes/issues/156

--- a/desktop-themes/TraditionalOk/gtk-3.0/gtk-widgets-img.css
+++ b/desktop-themes/TraditionalOk/gtk-3.0/gtk-widgets-img.css
@@ -668,7 +668,8 @@ toolbar.primary-toolbar .raised button.default,
 toolbar.primary-toolbar combobox button:focus,
 toolbar.inline-toolbar.horizontal button.text-button:focus,
 combobox button.combo:focus,
-combobox .linked button.combo:focus {
+combobox .linked button.combo:focus,
+combobox .linked button.combo:focus:only-child {
     border-image: url("img/border-focused.svg") 3 3 4 3 / 3px 3px 4px 3px repeat;
     border-radius: 3px;
     border-width: 1px 1px 2px 1px;
